--- a/index.html
+++ b/index.html
@@ -1,77 +1,122 @@
 <!DOCTYPE html>
-<html class="img-no-display"><head>
+<html class="img-no-display">
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-<title>木头小站</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>西木头市</title>
 <style>
 html {
     height: 100%;
     overflow: auto;
-	padding: 0;
+    padding: 0;
     margin: 0;  
 }
 body {
     height: 100%;
-	padding: 0;
+    padding: 0;
     margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+    background-color: #f5f7fa;
 }
 div#outer {
-    display: table;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     width: 100%;
+    padding: 20px 15px;
 }
 div#inner {
-    display: table-cell;
+    width: 100%;
+    max-width: 100%;
     text-align: center;
-    vertical-align: middle;
 }
 div#container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-    min-width: 800px;
-    min-height: 580px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 100%;
+    padding: 20px;
 }
 img {
-    width: 512px;
-    height: 512px;
-    margin: 30px 0;
+    width: 100%;
+    max-width: 280px;
+    height: auto;
+    margin: 20px 0;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 p#header {
-    font-family: Roboto-Medium;
-    font-size: 28px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
     color: #323C46;
     text-align: center;
-    line-height: 36px;
+    line-height: 1.3;
     margin-top: 0;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
+    padding: 0 10px;
 }
 p#paragraph {
-    font-family: Roboto-Regular;
-    font-size: 13px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    font-size: 1.1rem;
     color: #323C46;
     text-align: center;
-    line-height: 20px;
-	margin: 0 auto;
+    line-height: 1.6;
+    margin: 0 auto;
+    padding: 15px;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    max-width: 90%;
 }
 
+/* 平板设备适配 */
+@media (min-width: 768px) {
+    img {
+        max-width: 400px;
+    }
+    p#header {
+        font-size: 2.2rem;
+    }
+    p#paragraph {
+        font-size: 1.2rem;
+        max-width: 70%;
+    }
+}
+
+/* 桌面设备适配 */
+@media (min-width: 1024px) {
+    div#container {
+        max-width: 800px;
+    }
+    img {
+        max-width: 512px;
+    }
+    p#header {
+        font-size: 2.5rem;
+    }
+    p#paragraph {
+        font-size: 1.3rem;
+        max-width: 60%;
+    }
+}
 </style>
-<link href="../help.css" type="text/css" rel="stylesheet" />
-<link href="../scrollbar/flexcroll.css" type="text/css" rel="stylesheet" />
-<script type="text/javascript" src="../scrollbar/flexcroll.js"></script>
-<script type="text/javascript" src="../scrollbar/initFlexcroll.js"></script>
 </head>
 <body>
     <div id="outer">
         <div id="inner">
             <div id="container">
-				<div>
-                <img src="web_images/20251015175757.jpg"/>
-                <p id="header" style="color:blue;">怀念的，是青春！</p>
-                <p id="paragraph">菩提本无树，明镜亦非台，本来无一物，何处惹尘埃。</p>
-				</div>
-			</div>
+                <div>
+                    <img src="web_images/20251015175757.jpg"/>
+                    <p id="header" style="color:#4A5B6D;">怀念的，是青春！</p>
+                    <p id="paragraph">菩提本无树，明镜亦非台，本来无一物，何处惹尘埃。</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
