--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
     <!-- Theme Color -->
     <meta name="theme-color" content="#ffffff">
 
-
-
 <title>西木头市</title>
 <style>
 html {
@@ -74,7 +72,7 @@ img {
     height: auto;
     margin: 20px 0;
     border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    /* 移除阴影效果 */
 }
 p#header {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
@@ -86,6 +84,7 @@ p#header {
     margin-top: 0;
     margin-bottom: 20px;
     padding: 0 10px;
+    /* 移除阴影效果 */
 }
 p#paragraph {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
@@ -98,6 +97,7 @@ p#paragraph {
     background: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     max-width: 90%;
+    /* 移除阴影效果 */
 }
 
 /* 平板设备适配 */
