--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ p#paragraph {
                 <div>
                     <img src="web_images/20251015175757.jpg"/>
                     <p id="header" style="color:#4A5B6D;">怀念的，是青春！</p>
-                    <p id="paragraph">菩提本无树，明镜亦非台，本来无一物，何处惹尘埃。</p>
+                    <p id="paragraph">菩提本无树，明镜亦非台。<br>本来无一物，何处惹尘埃。</p>
                 </div>
             </div>
         </div>
