--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@ p#paragraph {
                     <img src="web_images/20251015175757.jpg"/>
                     <p id="header" style="color:#4A5B6D;">怀念的，是青春！</p>
                     <p id="paragraph">菩提本无树，明镜亦非台。<br>本来无一物，何处惹尘埃。</p>
+					
+					<div class="link-container">
+                        <a href="https://bbs.xjtu.edu.cn/" class="bbs-link" target="_blank">欢迎光临兵马俑BBS https://bbs.xjtu.edu.cn/</a>
+                    </div>
+					
                 </div>
             </div>
         </div>
