--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@ p#paragraph {
         max-width: 60%;
     }
 }
+
+.bbs-link {
+    display: inline-block;
+    background: #4A5B6D; /* 深灰色，与标题颜色一致 */
+    color: white;
+    text-decoration: none;
+    padding: 12px 25px;
+    border-radius: 30px;
+    font-weight: 500;
+    font-size: 1rem;
+    text-align: center;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    width: 100%;
+}
+
 </style>
 </head>
 <body>
