--- a/index.html
+++ b/index.html
@@ -153,12 +153,15 @@ p#paragraph {
                     <img src="web_images/20251015175757.jpg"/>
                     <p id="header" style="color:#4A5B6D;">怀念的，是青春</p>
                     <p id="paragraph">菩提本无树，明镜亦非台。<br>本来无一物，何处惹尘埃。</p>
-					
+
 					<div class="link-container">
-					<br>
-						<a href="https://bbs.xjtu.edu.cn" class="bbs-link" target="_blank">想看看兵马俑BBS开着吗？<br>欢迎光临 兵马俑BBS<br>https://bbs.xjtu.edu.cn</a>
+    					<br>
+    						<a href="https://bbs.xjtu.edu.cn" class="bbs-link" target="_blank" style="user-select: text; -webkit-user-select: text; -moz-user-select: text; -ms-user-select: text;">
+想看看兵马俑BBS开着吗？<br>欢迎光临 兵马俑BBS<br>https://bbs.xjtu.edu.cn
+    					</a>
 					</div>
-					
+
+
 					<div class="link-container">
 					<br>
 						<a href="https://byzt.xjtu.edu.cn/index.htm" class="bbs-link" target="_blank">想找找毕业典礼的照片吗？<br>毕业专题网—毕业相册<br>https://byzt.xjtu.edu.cn/index.htm</a>
