--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@ p#paragraph {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
     width: 100%;
+	user-select: text;
+    -webkit-user-select: text;
 }
+
 
 </style>
 </head>
@@ -160,6 +163,14 @@ p#paragraph {
 想看看兵马俑BBS开着吗？<br>欢迎光临 兵马俑BBS<br>https://bbs.xjtu.edu.cn
     					</a>
 					</div>
+					<div class="link-container">
+					    <br>
+					    <div class="bbs-link" style="user-select: text; -webkit-user-select: text; cursor: default;">
+					        想看看兵马俑BBS开着吗？<br>欢迎光临 兵马俑BBS<br>
+					        <a href="https://bbs.xjtu.edu.cn" target="_blank" style="color: inherit; text-decoration: underline;">https://bbs.xjtu.edu.cn</a>
+ 					   </div>
+					</div>
+
 
 
 					<div class="link-container">
