--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ p#paragraph {
 					    <br>
 					    <div class="bbs-link" style="user-select: text; -webkit-user-select: text; cursor: default;">
 					        想找找毕业典礼的照片吗？<br>毕业专题网—毕业相册<br>
-					        <a href="https://bbs.xjtu.edu.cn" target="_blank" style="color: inherit; text-decoration: underline;">https://byzt.xjtu.edu.cn/index.htm</a>
+					        <a href="https://byzt.xjtu.edu.cn/index.htm" target="_blank" style="color: inherit; text-decoration: underline;">https://byzt.xjtu.edu.cn/index.htm</a>
  					   </div>
 					</div>
 
