--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>木头小站 </title>
+    <title>基础力学课程思政</title>
     <style>
         :root {
             --primary-color: #8F7A62;
@@ -199,8 +199,7 @@
                     <li><a href="#">首页</a></li>
                     <li><a href="#">理论力学</a></li>
                     <li><a href="#">材料力学</a></li>
-					<li><a href="#">工程力学</a></li>
-					<li><a href="#">流体力学</a></li>
+
                 </ul>
             </nav>
         </div>
