--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
             <nav>
                 <ul>
                     <li><a href="#">首页</a></li>
-                    <li><a href="#">理论力学</a></li>
-                    <li><a href="#">材料力学</a></li>
+                    <li><a href="LogicPuzzle.html" class="nav-link">拼图解谜器</a></li>
+                    <li><a href="#">莫尔应力圆</a></li>
 
                 </ul>
             </nav>
